add the localdate

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -131,7 +131,7 @@ display: inline-block;
 *display: inline;
 *zoom:1;
 _float:right; 
-padding: 10px 15px;
+padding: 5px;
 min-height: 16px;
 word-break: break-all;
 line-height: 1.4; 
