working at home

--- a/pc/css/style.css
+++ b/pc/css/style.css
@@ -5,18 +5,27 @@
 ***/
 
 html{*border:none;overflow-x:hidden;}
-body{margin:0;font-family: '微软雅黑';color: #333; font-size: 12px; }
+body{margin:0;font: 12px/1.5 tahoma,arial,'Hiragino Sans GB',\5b8b\4f53,sans-serif; color: #333; }
 h1,h2,h3,h4,h5,h6,ol,ul,p,form{margin-top:0;margin-bottom:0}
 img{border:none;vertical-align:top;}
 ol,ul{padding-left:0;margin-left:0; }
 ul{list-style-type:none;}
 header,nav,section,article,footer,aside{display:block;margin:0;}
 a{color: #333;text-decoration:none; }
+/*  为减小文档大小，做如下规范：
+	b：行内块元素
+	i：图标
+	s：隐藏
+*/
+b{display: inline-block;font-weight: normal;}
+i{display: inline-block;font-style: normal;}
+s{display: none; text-decoration: none;}
 
 /*定义滚动条*/
 ::-webkit-scrollbar{width: 6px;height: 6px;}
 ::-webkit-scrollbar-thumb{border-radius: 10px;background-color: rgba(0,0,0,0.2);}
 ::-webkit-scrollbar-thumb:hover{border-radius: 10px;background-color: rgba(0,0,0,0.4);}
+
 
 
 /*公共*/
@@ -30,22 +39,22 @@ header{position: relative; height: 72px;border-bottom: 1px solid #b3b3b3;backgro
 section{position: absolute;left: 0;width: 100%;top: 73px;bottom: 0;overflow: hidden;}
 
 
-.head_logo{float: left; margin-left: 5px; height: 32px;line-height: 32px;font-size: 14px;font-weight: bold;cursor: pointer;white-space:nowrap;  }
+.head_logo{ float: left; margin-left: 5px; height: 32px;line-height: 32px;font-size: 14px;font-weight: bold;cursor: pointer;white-space:nowrap;  }
 .head_logo img{height: 22px; vertical-align: -6px;}
 
 
 .head_status{position: absolute;top: 0;right: 135px;}
-.head_status b{display: block;margin-top: 5px; line-height: 12px;text-indent: 15px;font-weight: normal; width: 12px;height: 12px;border-radius:12px;cursor: pointer;white-space:nowrap; }
-.head_status b:nth-child(1){background: #21ee1c; }
-.head_status b:nth-child(2){display: none; background: #bbbcbb; }
-.head_status b:nth-child(3){display: none; background: #f00404; }
+.head_status i{display: block;margin-top: 5px; line-height: 12px;text-indent: 15px;font-weight: normal; width: 12px;height: 12px;border-radius:12px;cursor: pointer;white-space:nowrap; }
+.head_status i:nth-child(1){background: #21ee1c; }
+.head_status i:nth-child(2){display: none; background: #bbbcbb; }
+.head_status i:nth-child(3){display: none; background: #f00404; }
 
 
 .head_win {position: absolute; display: inline-block; right: 0;top: 0; padding-left:4px; width: 92px;height: 22px;margin-right: 3px; background: url(image/head_win_bkg.png) no-repeat;}
 .head_win i{float: left;width: 26px;height: 22px;background: url(image/head_win.gif) no-repeat;cursor: pointer;}
-.head_win i.head_win_min{background-position:0 0;}
-.head_win i.head_win_nor{background-position:-26px 0;}
-.head_win i.head_win_clo{background-position:-52px 0;}
+.head_win i.min{background-position:0 0;}
+.head_win i.nor{background-position:-26px 0;}
+.head_win i.cls{background-position:-52px 0;}
 
 
 
@@ -54,7 +63,7 @@ section{position: absolute;left: 0;width: 100%;top: 73px;bottom: 0;overflow: hid
 .head_menu li.hot{background: url(image/head_menu_hot.png) no-repeat;}
 
 .head_msg {position: absolute;right: 5px;bottom: 5px;color: #989797; }
-.head_msg i{display: inline-block;width: 23px; margin-right:3px;height: 23px;vertical-align:-1px; background: url(image/head_msg.png) no-repeat; }
+.head_msg i{width: 23px; margin-right:3px;height: 23px;vertical-align:-1px; background: url(image/head_msg.png) no-repeat; }
 .head_msg b{font-weight: normal;}
 .head_msg.hot{color: #333;}
 .head_msg.hot i{background-position: -23px 0;cursor:pointer;}
@@ -63,30 +72,34 @@ section{position: absolute;left: 0;width: 100%;top: 73px;bottom: 0;overflow: hid
 
 
 /************* 会话窗口*****************/
-.talks{/*-webkit-column-count:3; */display: table-row; }
-
+.talks{display: flex; }
+.talks>div{position: relative; border:1px solid #ccc; border-radius:2px;margin: 5px;}
 
 /*访客列表*/
-.talks_side{display:table-cell;  width: 300px; position: absolute;left: 5px;top: 5px;bottom: 5px;   border:1px solid #e4e3e3; border-radius:2px;line-height: 28px;}
+.talks_side{ position: relative;width: 300px;left;margin: 5px; line-height: 28px;}
 
-.talks_side h2{height: 28px;background: #ddd;border-bottom: 1px solid #b1b1b1;}
-.talks_side_scroll{position: absolute;left: 0;top: 29px;right: 0;bottom: 0; overflow-y:scroll;}
-.talks_side ul {display: table; border-collapse:collapse; width: 100%;background-color: #fff;background-image: linear-gradient(#f5f5f5 50%, transparent 50%, transparent);background-size: 56px 56px;   }
-.talks_side li {display: table-row;width: 100%; }
-.talks_side span{display: table-cell;border:none; white-space:nowrap; padding:0 3px;  } 
-.talks_side li:hover{background: #c8dffc; cursor:pointer; } 
-.talks_side li:nth-child(1) cite{ position: fixed;margin-top:-28px;font-style: normal;}
-.talks_side li:nth-child(1) i{display: block;margin:7px auto 0; }
+.talks_side b{text-indent: 3px;text-overflow:ellipsis;overflow: hidden;} 
+.talks_side b:nth-child(2){flex-grow: 1; }
+.talks_side b:nth-child(3){flex-grow: 1; }
+.talks_side b:nth-child(4){width: 130px;}
 
-.talks_side i{display: inline-block;margin: 0 3px;  width: 12px;height: 12px;border-radius: 12px;font-style: normal;}
+
+.talks_side i{margin: 7px 4px 0 5px; width: 12px;height: 12px;border-radius: 12px;}
 .talks_side i.all {border:1px solid #999; background: #21ee1c;}
-.talks_side i.talking{background: #f00404;}
-.talks_side i.online {background: #21ee1c;}
-.talks_side i.offline{background: #bbbcbb;}
+.talks_side i.tlk {background: #f00404;}
+.talks_side i.onl {background: #21ee1c;}
+.talks_side i.off {background: #bbbcbb;}
 
-.talks_side li:nth-child(1) i.talking,
-.talks_side li:nth-child(1) i.online,
-.talks_side li:nth-child(1) i.offline{display: none;}
+.talks_side h2{display: flex; background: #ddd;line-height: 35px; border-bottom: 1px solid #ccc;white-space: nowrap;font-size: 12px;}
+.talks_side h2 i{margin-top: 10px;}
+.talks_side h2 b{font-weight: bold;}
+
+.talks_side h6{position: absolute;bottom: 0;left: 0;width: 100%;overflow: hidden;line-height: 29px;font-weight: normal; text-indent: 5px;border-top: 1px solid #ccc;background: #eee;}
+
+.talks_side ul {position: absolute;top: 36px;left: 0;right: 0;bottom: 30px;  overflow:auto; white-space:nowrap; }
+.talks_side li{display: flex; width: 100%;overflow: hidden;cursor:pointer; }
+.talks_side li:nth-child(even){background: #ededed;}
+.talks_side li:hover{background: #c8dffc; } 
 
 
 
@@ -94,22 +107,53 @@ section{position: absolute;left: 0;width: 100%;top: 73px;bottom: 0;overflow: hid
 
 
 /*聊天交互窗口*/
-.talks_ctrl{position: absolute;left: 310px;top: 5px;right: 30%;padding-right: 10px; bottom: 5px; border: 1px solid #e4e3e3; border-radius:2px;}
+.talls_webim{flex-grow:1;}
 
+/*快速回复*/
+.talks_reply h2{display: flex;position: relative; padding-left: 5px; font-size: 12px;height: 30px; border-top: 1px solid #ccc;border-bottom: 1px solid #ccc;background: #ddd;}
+.talks_reply h2 b{position: relative; width: 60px;height: 22px;line-height: 22px; margin-top: 7px;cursor: pointer; border:1px solid transparent;border-radius: 3px 3px 0 0;  text-align: center;}
+.talks_reply h2 b.hot{border-color: #ccc #ccc #fff;background: #fff;}
+.talks_reply h2 i{position: absolute;top: 0;right: 15px;cursor: pointer;font-size: 20px;color: #999;}
+.talks_reply h2 i:hover{color: #333;}
+
+.talks_reply ul{height: 164px; overflow: auto;line-height: 22px;}
+.talks_reply ul i{position: absolute;right: 10px;top: 0;cursor: pointer;color: #999;}
+.talks_reply li{position: relative; padding: 0 25px 0 5px; white-space: nowrap;overflow: hidden;text-overflow:ellipsis;cursor: pointer;}
+.talks_reply li:nth-child(even){background: #ededed;}
+.talks_reply li:hover{background: #c8dffc; } 
+.talks_reply li:hover i{color: #666;}
+.talks_reply li i:hover{color: #333;}
 
 
 
 /*客户信息*/
-.talks_infor{position: absolute;width: 30%;top: 5px;bottom: 5px; right: 0px;border:1px solid #e4e3e3; border-radius:2px; }
 
 
+/*信息记录*/
+.talks_infor{display:flex;flex-direction:column;flex-grow:1;}
 
 
+.talks_infor h2{display: flex;position: relative;height: 30px; padding-left: 5px; font-size: 12px;padding-top: 7px; border-bottom: 1px solid #ccc;background: #ddd;}
+.talks_infor h2 b{position: relative; width: 60px;height: 22px;line-height: 22px;cursor: pointer; border:1px solid transparent;border-radius: 3px 3px 0 0;  text-align: center;}
+.talks_infor h2 b.hot{border-color: #ccc #ccc #fff;background: #fff;}
+.talks_infor h2 i{position: absolute;top: 0;right: 15px;cursor: pointer;font-size: 20px;color: #999;}
+.talks_infor h2 i:hover{color: #333;}
 
 
+.talks_locus{display:flex;flex-direction:column;flex-grow:1;margin: 5px;}
+.talks_locus h3{display: flex;border-bottom: 1px solid #ccc;font-size: 12px; line-height: 24px;}
+.talks_locus h6{line-height: 30px;font-size: 12px;font-weight: normal;}
+.talks_locus b:nth-child(1){width: 60px;}
+.talks_locus b:nth-child(2){flex-grow:1;text-align: center;}
+.talks_locus a:nth-child(2){flex-grow:1;overflow: hidden;text-overflow:ellipsis;color: #5B7DCB;}
+.talks_locus b:nth-child(3){width: 40px;}
+.talks_locus ul{flex-grow:1; overflow: auto;white-space: nowrap;line-height: 22px;}
+.talks_locus li{display: flex;}
+.talks_locus li:nth-child(even){background: #ededed;}
+.talks_locus li:hover{background: #c8dffc; } 
 
 
-
-
-
+.talks_recode{height: 170px;padding: 10px 15px; border-top: 1px solid #ccc;}
+.talks_recode input{line-height: 18px;height: 18px;padding: 2px 5px;width: 60%;margin-left: -5px; margin-bottom: 5px;border:1px solid #ccc;border-radius: 2px;outline: none;}
+.talks_recode textarea{width: 100%;margin-left: -5px;border:1px solid #ccc;border-radius: 2px;outline: none;}
 
